Actions
Bug #5901
closedSMB clients get errors trying to delete non-empty directories
Start date:
2015-05-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
At the protocol level, we see that the client was allowed to set the "delete on close" flag on a directory when that directory was not empty.
In such cases, the server is supposed to return NT_STATUS_DIRECTORY_NOT_EMPTY and not let you set that flag.
Related issues
Updated by Andrew Stormont about 7 years ago
- Related to Bug #1663: Non-empty directories can be marked delete on close in CIFS, but not actually deleted added
Updated by Electric Monk about 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 5496c1178a1a48006226450b13c2df195831794c
commit 5496c1178a1a48006226450b13c2df195831794c Author: Alek Pinchuk <alek@nexenta.com> Date: 2015-05-08T14:38:39.000Z 5901 SMB clients get errors trying to delete non-empty directories 1663 Non-empty directories can be marked delete on close in CIFS, but not actually deleted Reviewed by: Bayard Bell <buffer.g.overflow@gmail.com> Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions