5901 SMB clients get errors trying to delete non-empty directories 1663 Non-empty directories can be marked delete on close in CIFS, but not actually deleted Reviewed by: Bayard Bell <buffer.g.overflow@gmail.com> Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>